--- a/html/cart.html
+++ b/html/cart.html
@@ -8,9 +8,9 @@
                     <div class="bg"></div>
                     <a>Акаунт</a>
                     <div class="dropdown">
-                        <a id="login-btn" href="ent.html">Увійти</a> <!-- Кнопка для входу -->
-                        <a id="account-btn" href="account.html" style="display:none;">Кабінет</a> <!-- Кнопка для акаунта -->
-                        <a id="logout-btn" href="logout" style="display:none;">Вийти</a> <!-- Кнопка для виходу -->
+                        <a id="login-btn" href="ent.html">Увійти</a> 
+                        <a id="account-btn" href="account.html" style="display:none;">Кабінет</a>
+                        <a id="logout-btn" href="logout" style="display:none;">Вийти</a>
                     </div>
                 </div>
                 <div class="container">
@@ -38,7 +38,6 @@
                         </tr>
                     </thead>
                     <tbody id="cart-items">
-                        <!-- Замовлення буде відображатись тут -->
                     </tbody>
                 </table>
                 <strong>Загальна сума: </strong><span id="total-amount">0 грн</span>
@@ -52,7 +51,7 @@
         .then(data => {
             if (data.success) {
                 alert('Замовлення успішно оформлено!');
-                window.location.href = 'main.html'; // Перенаправлення на сторінку замовлення
+                window.location.href = 'main.html'; 
             } else {
                 alert('Помилка оформлення замовлення: ' + data.message);
             }
@@ -60,7 +59,6 @@
         .catch(err => console.error('Помилка при оформленні замовлення:', err));
 }
 
-            // Перевірка сесії для зміни кнопок у dropdown
             fetch('/session-status')
                    .then(response => response.json())
                    .then(data => {
@@ -69,29 +67,26 @@
                        const logoutBtn = document.getElementById('logout-btn');
 
                        if (data.isLoggedIn) {
-                           // Якщо користувач увійшов
                            loginBtn.style.display = 'none';
                            accountBtn.style.display = 'block';
                            logoutBtn.style.display = 'block';
                        } else {
-                           // Якщо користувач не увійшов
                            loginBtn.style.display = 'block';
                            accountBtn.style.display = 'none';
                            logoutBtn.style.display = 'none';
                        }
                    });
 
-// Завантаження замовлення для активного користувача
 fetch('/api/cart')
     .then(response => response.json())
     .then(data => {
         const cartTable = document.getElementById('cart-items');
         const totalAmountElement = document.getElementById('total-amount');
-        let totalAmount = 0;  // Змінна для обчислення загальної суми
+        let totalAmount = 0; 
 
         if (data.length === 0) {
             cartTable.innerHTML = '<tr><td colspan="4">Ваш кошик порожній</td></tr>';
-            totalAmountElement.innerText = '0.00 грн';  // Якщо кошик порожній, сума 0
+            totalAmountElement.innerText = '0.00 грн'; 
         } else {
             data.forEach(item => {
                 const row = document.createElement('tr');
@@ -103,19 +98,15 @@ fetch('/api/cart')
                 `;
                 cartTable.appendChild(row);
 
-                // Обчислюємо загальну суму
                 totalAmount += item.price * item.quantity;
             });
 
-            // Округлюємо до двох знаків після коми
             totalAmountElement.innerText = `${totalAmount.toFixed(2)} грн`;  
         }
     })
 
     .catch(err => console.error('Помилка при завантаженні кошика:', err));
 
-            
-                // Видалення товару з кошика
                 function removeItem(productId, currentQuantity) {
                     const quantityToRemove = prompt(`Скільки товару видалити? (Макс: ${currentQuantity})`, currentQuantity);
                     if (quantityToRemove && !isNaN(quantityToRemove) && quantityToRemove > 0 && quantityToRemove <= currentQuantity) {
@@ -127,7 +118,7 @@ fetch('/api/cart')
                         .then(response => response.json())
                         .then(data => {
                             alert(data.message);
-                            location.reload(); // Перезавантажуємо сторінку для оновлення кошика
+                            location.reload(); 
                         })
                         .catch(err => console.error('Помилка при видаленні товару:', err));
                     } else {
