--- a/html/main.html
+++ b/html/main.html
@@ -8,9 +8,9 @@
                     <div class="bg"></div>
                     <a>Акаунт</a>
                     <div class="dropdown">
-                        <a id="login-btn" href="ent.html">Увійти</a> <!-- Кнопка для входу -->
-                        <a id="account-btn" href="account.html" style="display:none;">Кабінет</a> <!-- Кнопка для акаунта -->
-                        <a id="logout-btn" href="logout" style="display:none;">Вийти</a> <!-- Кнопка для виходу -->
+                        <a id="login-btn" href="ent.html">Увійти</a> 
+                        <a id="account-btn" href="account.html" style="display:none;">Кабінет</a>
+                        <a id="logout-btn" href="logout" style="display:none;">Вийти</a> 
                     </div>
                 </div>
                 <div class="container">
@@ -26,7 +26,6 @@
             <div class="darken"></div>
         </header>
         <script>
-             // Перевірка сесії для зміни кнопок у dropdown
              fetch('/session-status')
                     .then(response => response.json())
                     .then(data => {
@@ -35,12 +34,10 @@
                         const logoutBtn = document.getElementById('logout-btn');
 
                         if (data.isLoggedIn) {
-                            // Якщо користувач увійшов
                             loginBtn.style.display = 'none';
                             accountBtn.style.display = 'block';
                             logoutBtn.style.display = 'block';
                         } else {
-                            // Якщо користувач не увійшов
                             loginBtn.style.display = 'block';
                             accountBtn.style.display = 'none';
                             logoutBtn.style.display = 'none';
